version 2.1-rc1	 XX-Mar-2013

. [FIX] LabelBMFont: setting color of label and individual chars works as expected
. [FIX] RGBAProtocol: color and opacity are propagated if parent has cascade property enabled
		renamed methods: cascadeColor -> cascadeColorEnabled, cascadeOpacity -> cascadeOpacityEnabled
. [FIX] Sprite: color code improved. Removed 'unmodifiedColor' ivar.

version 2.1-rc0	 28-Jan-2013
. [NEW] Actions: All the actions that modify the position property can be run at the same time.
		MoveBy/To, JumpBy/To, BezierTo/By, CatmullRomTo/By and CardinalSplineTo/By won't override the results of previous actions.
. [NEW] FileUtils: Added "filename lookup" dictionary, useful to alter the name of an asset in runtime. Useful for cross platform
. [NEW] GLProgram: Added uniformLocationForName: method
. [NEW] NodeRGBA: New node that implements opacity and color. Sprite, Label, Menu and other are subclasses of this one.
		It also supports cascading color and opacity (disabled by default in v2.1)
. [NEW] OpenGL: CC_ENABLE_GL_STATE_CACHE is enabled by default. If you are migrating from v1.x, then turn it off to easy the transition
. [FIX] Texture: PVRv3 textures automatically set the correct value for premultiplid alpha
. [FIX] Actions, Animations, Camera, Director, Menu, Node, Particles, Parallax, Sprite, SpriteBatch, Texture, TextureAtlas, Transitions: All ivars use _ as prefix, not as suffix
. [FIX] CocosDenshion: Tests moved to tests directory. Merged CocosDenshion and CocosDenshionExtras directories
. [FIX] Configuration: Can be initialized before an OpenGL context is created (issue #1450)
. [FIX] Director: replaced length with lenght
		Fixed 2 memory leaks in createStatsLabel
		Frees DrawingPrimitives resources (issue #1456)
		The 1st dt after startAnimation will be 0 (issue #1435)
. [FIX] EaseActions: "other_" ivar renamed to "_inner". It is a property now
. [FIX] Effects: ccGridSize is no longer used. It was replaced by CGPoint and CGSize